add css style and showAccordeon function for accordeons

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </ul>
       </nav>
     </header>
-    <!-- <div class="slides-container relative">
+    <div class="slides-container relative">
       <div class="slide fade relative">
         <div class="slide-image">
           <img
@@ -167,9 +167,173 @@
       <a class="next" id="next">&#10095;</a>
 
       <div class="text-center dots absolute" id="dots"></div>
-    </div> -->
+    </div>
 
     <div class="accordeon-container">
+      <h2 class="text-center">Programme de la formation</h2>
+      <div class="text-center">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi
+        voluptas, corrupti distinctio amet ducimus modi non consequuntur a
+        aperiam libero blanditiis quis. At nam, enim consequatur aliquam
+        corporis officia natus. Incidunt possimus veritatis minus corrupti
+        aliquam aliquid quis accusantium sed expedita sequi, ratione quam
+        excepturi perferendis rem aspernatur atque a laboriosam. Alias quisquam
+        hic, nisi atque molestiae saepe iure numquam. Officiis, similique
+        sapiente, perferendis laudantium reiciendis provident asperiores officia
+        atque delectus iure rem facilis expedita exercitationem, quidem
+        consequatur corporis. Voluptatem nostrum maiores incidunt natus eaque
+        doloribus corrupti officiis repellendus asperiores.
+      </div>
+      <div class="accordeon-item">
+        <div class="accordeon-title">
+          <h2>Apprendre le langage Python</h2>
+        </div>
+        <div class="accordeon-content">
+          <ul class="unlisted">
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="accordeon-item">
+        <div class="accordeon-title">
+          <h2>Apprendre le langage Python</h2>
+        </div>
+        <div class="accordeon-content">
+          <ul class="unlisted">
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="accordeon-item">
+        <div class="accordeon-title">
+          <h2>Apprendre le langage Python</h2>
+        </div>
+        <div class="accordeon-content">
+          <ul class="unlisted">
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="accordeon-item">
+        <div class="accordeon-title">
+          <h2>Apprendre le langage Python</h2>
+        </div>
+        <div class="accordeon-content">
+          <ul class="unlisted">
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="accordeon-item">
+        <div class="accordeon-title">
+          <h2>Apprendre le langage Python</h2>
+        </div>
+        <div class="accordeon-content">
+          <ul class="unlisted">
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="accordeon-item">
+        <div class="accordeon-title">
+          <h2>Apprendre le langage Python</h2>
+        </div>
+        <div class="accordeon-content">
+          <ul class="unlisted">
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+            <li class="accordeon-content-item">
+              <i class="fas fa-play-circle"></i>
+              <a href="#">Introduction au langage Python</a>
+            </li>
+          </ul>
+        </div>
+      </div>
       <div class="accordeon-item">
         <div class="accordeon-title">
           <h2>Apprendre le langage Python</h2>
@@ -247,7 +411,7 @@
       </div>
     </div>
 
-    <!-- <script src="/assets/js/functions/slider.js"></script> -->
+    <script src="/assets/js/functions/slider.js"></script>
     <script src="/assets/js/functions/listeners.js"></script>
     <script src="/assets/js/main.js"></script>
   </body>
